IE fixes; see http://stackoverflow.com/questions/21840551/background-size-with-svg-squished-in-ie9-10

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -7209,11 +7209,21 @@ body p {
 }
 
 .navbar .page-container {
-  height: 100px;
+  position: relative;
+  -webkit-transition: 0.5s ease-in-out;
+          transition: 0.5s ease-in-out;
+}
+
+.navbar .page-container:after {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 588px;
+  height: 80px;
+  margin-left: -294px;
   background-image: url("/images/logo-text.svg");
-  background-position: center top;
   background-repeat: no-repeat;
-  background-size: 588px auto;
+  content: "";
   -webkit-transition: 0.5s ease-in-out;
           transition: 0.5s ease-in-out;
 }
@@ -7236,12 +7246,17 @@ body p {
   .navbar {
     min-height: 180px;
   }
-  .navbar .page-container {
-    height: 175px;
+  .navbar .page-container:after {
+    position: absolute;
+    top: 135px;
+    left: 50%;
+    width: 300px;
+    height: 40px;
+    margin-left: -150px;
     background-image: url("/images/logo-text-small.svg");
-    background-position: center bottom;
+    background-position: center top;
     background-repeat: no-repeat;
-    background-size: 300px auto;
+    content: "";
   }
   .navbar-brand-logo {
     width: 134px;
