--- a/client/app/styles/navbar.less
+++ b/client/app/styles/navbar.less
@@ -10,15 +10,26 @@
 }
 
 
+@brand-logo-text-width: 588px;
+
 .navbar {
   .transition(0.5s ease-in-out);
   .page-container {
     .transition(0.5s ease-in-out);
+    position: relative;
+  }
+
+  .page-container:after {
+    .transition(0.5s ease-in-out);
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: 50%;
+    margin-left: -@brand-logo-text-width / 2;
+    width: @brand-logo-text-width;
+    height: 80px;
     background-image: url("/images/logo-text.svg");
     background-repeat: no-repeat;
-    background-position: center top;
-    background-size: 588px auto;
-    height: 100px;
   }
 }
 
@@ -37,16 +48,22 @@
   }
 }
 
+@brand-logo-text-small-width: 300px;
 
 @media (max-width: @xs-header-with) {
   .navbar {
     min-height: 180px;
-    .page-container {
+    .page-container:after {
+      position: absolute;
+      content: "";
+      top: 135px;
+      left: 50%;
+      margin-left: -@brand-logo-text-small-width / 2;
+      width: @brand-logo-text-small-width;
+      height: 40px;
       background-image: url("/images/logo-text-small.svg");
       background-repeat: no-repeat;
-      background-position: center bottom;
-      background-size: 300px auto;
-      height: 175px;
+      background-position: center top;
     }
   }
   .navbar-brand-logo {
